--- a/site/css/style.css
+++ b/site/css/style.css
@@ -29,3 +29,19 @@ body {
     background-size: cover;
     background-position: center;
 }
+
+#home-content-box{
+    width: 100%;
+    height: 100%;
+    display: table;
+}
+
+#home-content-box-inner{
+    display: table-cell;
+    vertical-align: middle;
+    /* text-align: center; */
+}
+
+#home-heading h3{
+    color: #fff;
+}
