--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,47 +1,72 @@
-html, body {
-    height: 100%;
+/* CSS General */
+
+html,
+body {
+  height: 100%;
 }
-
-
-
 
 body {
-    font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
-
-
-
-
-
+h3 {
+  text-transform: uppercase;
+}
 
 /*===================================
                 Home
 ===================================*/
 #home {
-    height: 100%;
+  height: 100%;
 }
 
-#home-cover{
-    height: 100%;
-    background-image: url("../img/bg-home.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+#home-cover {
+  height: 100%;
+  background-image: url("../img/bg-home.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
-#home-content-box{
-    width: 100%;
-    height: 100%;
-    display: table;
+#home-content-box {
+  width: 100%;
+  height: 100%;
+  display: table;
 }
 
-#home-content-box-inner{
-    display: table-cell;
-    vertical-align: middle;
-    /* text-align: center; */
+#home-content-box-inner {
+  display: table-cell;
+  vertical-align: middle;
+  /* text-align: center; */
 }
 
-#home-heading h3{
-    color: #fff;
+#home-heading h3 {
+  color: #fff;
+  font-size: 55px;
+  font-weight: 500;
+  margin: 20px 0px 20px 0px;
+}
+
+/*===================================
+                Buttons (generic)
+===================================*/
+
+.btn-general {
+  border-color: #fff;
+  border-width: 2px;
+  border-radius: 0%;
+  padding: 12px 26px 12px 26px;
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.btn-white {
+  border-color: #fff;
+  color: #fff;
+}
+
+.btn-white:hover,
+.btn-white:focus {
+  background-color: #fff;
+  color: #41464b;
 }
